# linux_tools

./: README.md
aziokbd/: aziokbd.c  aziokbd.ko  aziokbd.mod.c  fuji  install.sh  mini_install.sh  modules.order
aziokbd/patch/: 1.diff
capability_test/: build.sh  dump_caps.cpp
check_open_files/: Android.mk  GNUmakefile  check_open_files.cpp  test_utils.cpp  utils.cpp  utils.h
db_tool/: Makefile.am  Makefile.in  build.gradle  configure  configure.ac
db_tool/autom4te.cache/: output.0  requests  traces.0  traces.1
db_tool/src/: Makefile.am  Makefile.in  db  db.dot  dbcc  dbgo  part1  part2  tools.py
install_vim_plugins/: install_vim  tools.py  vimrc
jgrep/: build.gradle
jgrep/src/: log4j.properties
jgrep/src/main/cpp/: GNUmakefile  org_cfig_jgrep_AnsiColor.cpp  org_cfig_jgrep_AnsiColor.h
jgrep/src/main/java/org/cfig/jgrep/: AnsiColor.java  BinaryChecker.java  Main.java  Worker.java
jgrep/src/main/resources/: log4j.properties
jgrep/src/native/: GNUmakefile  org_cfig_jgrep_AnsiColor.cpp
jgrep/src/org/cfig/jgrep/: Args.java  NativeHelper.java  Worker.java
jgrep/src/test/: preferreddrivers.xml  test.sh
jgrep/test/: jgrep  test.sh
keytool/: Makefile
memstat/: android.diff  memstat.diff
memtrack/: GNUmakefile  README  memtrack  memtrack-arm  memtrack.h
memtrack/include/cutils/: log.h
scripts/: prepare_code.py  recon  sepopush
