# for top makefile

#-------------------------------------------------------------------------------
#                                  globals
#-------------------------------------------------------------------------------
ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src .
#-------------------------------------------------------------------------------
#                                   other
#-------------------------------------------------------------------------------


# for sub makefile
#-------------------------------------------------------------------------------
#                                  globals
#-------------------------------------------------------------------------------
AM_CXXFLAGS = -I$(srcdir) -std=c++11

#-------------------------------------------------------------------------------
#                                  binaries
#-------------------------------------------------------------------------------

#-------------------------------------------------------------------------------
#                                  binaries(shared)
#-------------------------------------------------------------------------------

#-------------------------------------------------------------------------------
#                                  libraries(static)
#-------------------------------------------------------------------------------

#-------------------------------------------------------------------------------
#                                    other
#-------------------------------------------------------------------------------
